--- a/kernel/.config
+++ b/kernel/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.13
-# Sat Jun 11 20:41:38 2011
+# Sat Jun 11 22:31:44 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-cyanogenmod"
+CONFIG_LOCALVERSION="-imoseyon-3.1.0test3"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -44,7 +44,7 @@ CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_BZIP2 is not set
 CONFIG_KERNEL_LZMA=y
 # CONFIG_KERNEL_LZO is not set
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
@@ -154,7 +154,7 @@ CONFIG_LBDAF=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_CFQ=y
+# CONFIG_IOSCHED_CFQ is not set
 # CONFIG_IOSCHED_BFQ is not set
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
@@ -356,7 +356,7 @@ CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_SDIO_AL=y
 # CONFIG_MSM_SDIO_DMUX is not set
 CONFIG_MSM_N_WAY_SMSM=y
-CONFIG_MSM_RESET_MODEM=m
+# CONFIG_MSM_RESET_MODEM is not set
 CONFIG_MSM_SMD_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
@@ -419,8 +419,7 @@ CONFIG_MSM_SSBI=y
 # CONFIG_RPC_SIZE_1024 is not set
 CONFIG_ACPUCLOCK_DEBUG=y
 # CONFIG_ACPUCLOCK_LIMIT_768MHZ is not set
-CONFIG_ACPUCLOCK_OVERCLOCKING=y
-CONFIG_JESUS_PHONE=y
+# CONFIG_ACPUCLOCK_OVERCLOCKING is not set
 # CONFIG_HTC_SMEM_MSMC1C2_DEBUG is not set
 # CONFIG_HTC_OFFMODE_ALARM is not set
 # CONFIG_HTC_QUICKBOOT_OFFMODE_ALARM is not set
@@ -463,9 +462,9 @@ CONFIG_ARCH_HAS_BARRIERS=y
 # CONFIG_DONT_RESERVE_FROM_MOVABLE_ZONE is not set
 # CONFIG_RESERVE_FIRST_PAGE is not set
 CONFIG_CPU_HAS_PMU=y
-CONFIG_ARM_ERRATA_430973=y
-CONFIG_ARM_ERRATA_458693=y
-CONFIG_ARM_ERRATA_460075=y
+# CONFIG_ARM_ERRATA_430973 is not set
+# CONFIG_ARM_ERRATA_458693 is not set
+# CONFIG_ARM_ERRATA_460075 is not set
 # CONFIG_KSAPI is not set
 # CONFIG_FIQ_DEBUGGER is not set
 
@@ -1102,12 +1101,12 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
-CONFIG_IFB=y
+# CONFIG_IFB is not set
 CONFIG_DUMMY=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_TUN=y
+# CONFIG_TUN is not set
 # CONFIG_VETH is not set
 # CONFIG_NET_ETHERNET is not set
 # CONFIG_NETDEV_1000 is not set
@@ -1139,7 +1138,7 @@ CONFIG_SLHC=y
 # CONFIG_NETCONSOLE is not set
 CONFIG_MSM_RMNET=y
 CONFIG_MSM_RMNET_SDIO=y
-# CONFIG_MSM_RMNET_DEBUG is not set
+CONFIG_MSM_RMNET_DEBUG=y
 # CONFIG_NETPOLL is not set
 # CONFIG_NET_POLL_CONTROLLER is not set
 # CONFIG_GAN_ETH is not set
@@ -1653,7 +1652,7 @@ CONFIG_HID=y
 #
 # Special HID drivers
 #
-CONFIG_HID_APPLE=y
+# CONFIG_HID_APPLE is not set
 # CONFIG_HID_MAGICMOUSE is not set
 # CONFIG_HID_WACOM is not set
 CONFIG_USB_SUPPORT=y
@@ -1900,6 +1899,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # RAR Register Driver
 #
 # CONFIG_IIO is not set
+# CONFIG_RAMZSWAP is not set
 # CONFIG_BATMAN_ADV is not set
 # CONFIG_FB_SM7XX is not set
 
@@ -1941,8 +1941,7 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_QUOTA is not set
 # CONFIG_AUTOFS_FS is not set
 # CONFIG_AUTOFS4_FS is not set
-CONFIG_FUSE_FS=y
-# CONFIG_CUSE is not set
+# CONFIG_FUSE_FS is not set
 
 #
 # Caches
