--- a/kernel/.config
+++ b/kernel/.config
@@ -35,7 +35,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-imoseyon-3.1.0test3"
+CONFIG_LOCALVERSION="-imoseyon-3.1.1-184"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -418,8 +418,6 @@ CONFIG_MSM_NPA_LOG=y
 CONFIG_MSM_SSBI=y
 # CONFIG_RPC_SIZE_1024 is not set
 CONFIG_ACPUCLOCK_DEBUG=y
-# CONFIG_ACPUCLOCK_LIMIT_768MHZ is not set
-# CONFIG_ACPUCLOCK_OVERCLOCKING is not set
 # CONFIG_HTC_SMEM_MSMC1C2_DEBUG is not set
 # CONFIG_HTC_OFFMODE_ALARM is not set
 # CONFIG_HTC_QUICKBOOT_OFFMODE_ALARM is not set
