--- a/mkboot/boot.img-ramdisk/init.rc
+++ b/mkboot/boot.img-ramdisk/init.rc
@@ -256,6 +256,8 @@ on boot
     write /proc/sys/vm/dirty_ratio  90
     write /proc/sys/vm/vfs_cache_pressure  25
     write /proc/sys/vm/swappiness  30
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1024000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 245760
 
     # Permissions for System Server and daemons.
     chown radio system /sys/android_power/state
