--- a/mkboot/boot.img-ramdisk/init.mecha.rc
+++ b/mkboot/boot.img-ramdisk/init.mecha.rc
@@ -79,6 +79,8 @@ service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
     disabled
     oneshot
 
+service iprenew_eth0 /system/bin/dhcpcd -n
+
 # compass/accelerometer daemon
 service akmd /system/bin/akmd
     user compass
