--- a/kernel/.config
+++ b/kernel/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.13
-# Tue Jun 14 08:48:40 2011
+# Fri Jun 17 21:24:45 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-imoseyon-3.1.4"
+CONFIG_LOCALVERSION="-imoseyon-3.1.5cm7"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -303,7 +303,7 @@ CONFIG_QCT_LTE=y
 # CONFIG_MACH_VIVOW_CT is not set
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_PHYS_OFFSET=0x00200000
-# CONFIG_PANEL_SELF_REFRESH is not set
+CONFIG_PANEL_SELF_REFRESH=y
 CONFIG_HTC_BATTCHG=y
 # CONFIG_HTC_BATT_CORE is not set
 CONFIG_HTC_BATTCHG_SMEM=y
@@ -401,7 +401,7 @@ CONFIG_MICROP_COMMON=y
 CONFIG_HTC_HEADSET_MGR=y
 # CONFIG_HTC_HEADSET_H2W is not set
 CONFIG_HTC_HEADSET_GPIO=y
-# CONFIG_HTC_HEADSET_MICROP is not set
+CONFIG_HTC_HEADSET_MICROP=y
 CONFIG_HTC_HEADSET_PMIC=y
 # CONFIG_HTC_HEADSET_PMIC_ADC is not set
 # CONFIG_HTC_ONMODE_CHARGING is not set
