--- a/mkboot/boot.img-ramdisk/init.mecha.rc
+++ b/mkboot/boot.img-ramdisk/init.mecha.rc
@@ -80,6 +80,8 @@ service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
     oneshot
 
 service iprenew_eth0 /system/bin/dhcpcd -n
+    disabled
+    oneshot
 
 # compass/accelerometer daemon
 service akmd /system/bin/akmd
