--- a/kernel/.config
+++ b/kernel/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.13
-# Fri Jun 17 21:24:45 2011
+# Fri Jun 17 21:54:27 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-imoseyon-3.1.5cm7"
+CONFIG_LOCALVERSION="-imoseyon-3.1.6cm7-184"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -384,9 +384,8 @@ CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_CPU_FREQ_SCREEN is not set
 # CONFIG_MSM_HW3D is not set
 # CONFIG_HTC_ACOUSTIC is not set
-CONFIG_MSM_ADSP_REPORT_EVENTS=y
-CONFIG_MSM7KV2_AUDIO=y
-# CONFIG_MSM7KV2_1X_AUDIO is not set
+# CONFIG_MSM7KV2_AUDIO is not set
+CONFIG_MSM7KV2_1X_AUDIO=y
 CONFIG_MSM_CLOCK_CTRL_DEBUG=y
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_WIFI_MEM_PREALLOC=y
@@ -1637,7 +1636,6 @@ CONFIG_SND_SOC=y
 CONFIG_SND_MSM7KV2_SOC=y
 CONFIG_SND_MSM7KV2_DAI_SOC=y
 CONFIG_SND_MSM_SOC_MSM7KV2=y
-# CONFIG_SND_MVS_SOC is not set
 # CONFIG_SND_SOC_MSM8660 is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
