--- a/kernel/.config
+++ b/kernel/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.13
-# Sat Jul  2 21:46:42 2011
+# Sun Jul  3 23:23:57 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-imoseyon-3.2.1CM7"
+CONFIG_LOCALVERSION="-imoseyon-3.2.2AOSP-184"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1721,7 +1721,7 @@ CONFIG_USB_ANDROID_ACCESSORY=y
 # CONFIG_USB_G_WEBCAM is not set
 CONFIG_USB_ACCESSORY_DETECT=y
 CONFIG_USB_ACCESSORY_DETECT_BY_ADC=y
-CONFIG_DOCK_ACCESSORY_DETECT=y
+# CONFIG_DOCK_ACCESSORY_DETECT is not set
 # CONFIG_USB_BYPASS_VBUS_NOTIFY is not set
 CONFIG_USB_HUB=y
 
