input driver code from 36.1

--- a/kernel/.config
+++ b/kernel/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.13
-# Tue Jul  5 23:04:47 2011
+# Thu Jul  7 17:33:44 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-imoseyon-3.3.4AOSP"
+CONFIG_LOCALVERSION="-imoseyon-3.3.5AOSP"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1174,11 +1174,10 @@ CONFIG_TOUCHSCREEN_ATMEL=y
 # CONFIG_TOUCHSCREEN_NTRIG_8x60 is not set
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
-# CONFIG_TOUCHSCREEN_AD7879_I2C is not set
-# CONFIG_TOUCHSCREEN_AD7879_SPI is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_TMA is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_TMG is not set
+# CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
 # CONFIG_TOUCHSCREEN_EETI is not set
@@ -1194,6 +1193,7 @@ CONFIG_TOUCHSCREEN_ATMEL=y
 # CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
 # CONFIG_TOUCHSCREEN_MSM is not set
+# CONFIG_TOUCHSCREEN_QT602240 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI is not set
 CONFIG_TOUCHSCREEN_COMPATIBLE_REPORT=y
 # CONFIG_TOUCHSCREEN_CONCATENATE_REPORT is not set
@@ -1224,6 +1224,7 @@ CONFIG_INPUT_CAPELLA_CM3602=y
 CONFIG_LIGHTSENSOR_SMD=y
 CONFIG_INPUT_DUMMY_KEYPAD=y
 # CONFIG_LIGHTSENSOR_PMIC is not set
+# CONFIG_INPUT_ADXL34X is not set
 # CONFIG_PMIC8058_PWRKEY is not set
 # CONFIG_PMIC8058_OTHC is not set
 # CONFIG_INPUT_OPTICALJOYSTICK is not set
