--- a/kernel/.config
+++ b/kernel/.config
@@ -34,7 +34,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-imoseyon-3.5.8AOSP-184"
+CONFIG_LOCALVERSION="-imoseyon-3.5.9AOSP"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
