--- a/mkboot/boot.img-ramdisk/init.mecha.rc
+++ b/mkboot/boot.img-ramdisk/init.mecha.rc
@@ -22,11 +22,16 @@ on boot
     mkdir /data/radio 0770 radio radio
     chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
     chown radio system /sys/module/rpcrouter_sdio_xprt/parameters/debug_mask
-    #from QCT Fusion
 
     # Improvements for evdo-b and lte
     write /proc/sys/net/core/rmem_max  262144
     write /proc/sys/net/core/wmem_max  262144
+
+    # Tweak background writeout
+    write /proc/sys/vm/dirty_expire_centisecs 200
+    write /proc/sys/vm/dirty_background_bytes 1024000
+    write /proc/sys/vm/dirty_bytes 20480000
+    write /proc/sys/vm/highmem_is_dirtyable 1
 
     #wifi
     mkdir /data/misc 1771 system misc
@@ -34,6 +39,14 @@ on boot
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
+
+    # Permissions for System Server and daemons.
+    chown radio system /sys/module/gpio_event/parameters/phone_call_status
+    chmod 0660 /sys/android_camera2/htcwc
+    chown media system /sys/android_camera2/htcwc
+    chown radio system /sys/camera_led_status/led_ril_status
+    chown system system /sys/camera_led_status/led_wimax_status
+    chown system system /sys/camera_led_status/led_hotspot_status
 
     # Permissions for Liblights.
     chown system system /sys/class/leds/green/brightness
@@ -49,6 +62,10 @@ on boot
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
     chmod 0660                /sys/class/rfkill/rfkill0/state
+
+    # bluetooth MAC address programming
+    chown bluetooth bluetooth /sys/module/board_mecha/parameters/bdaddr
+    setprop ro.bt.bdaddr_path /sys/module/board_mecha/parameters/bdaddr
 
 	# for wireless modem
 	chown system system /sys/module/serial/parameters/modem_enabled
@@ -122,6 +139,24 @@ service modem /system/xbin/wireless_modem
 	user system
 	group system
 	disabled
+
+service htc_ebdlogd /system/bin/htc_ebdlogd -s -k -P 7
+    user root
+    disabled
+    oneshot
+    ioprio idle 0
+
+service htc_ebdlogd_rel /system/bin/htc_ebdlogd -s -k
+    user root
+    disabled
+    oneshot
+    ioprio idle 0
+
+on property:ro.build.tags=test-keys
+    start htc_ebdlogd
+
+on property:ro.build.tags=release-keys
+    start htc_ebdlogd_rel
 
 on property:service.modem.enable=1
 	start modem
