--- a/mkboot/boot.img-ramdisk/init.mecha.rc
+++ b/mkboot/boot.img-ramdisk/init.mecha.rc
@@ -22,6 +22,7 @@ on boot
     mkdir /data/radio 0770 radio radio
     chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
     chown radio system /sys/module/rpcrouter_sdio_xprt/parameters/debug_mask
+    #from QCT Fusion
 
     # Improvements for evdo-b and lte
     write /proc/sys/net/core/rmem_max  262144
@@ -117,8 +118,10 @@ service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
     group bluetooth net_bt_admin
     disabled
 
+
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p13 /dev/block/mmcblk0p14
     user root
+
 
 #+from QCT Fusion
 service qmuxd /system/bin/qmuxd
@@ -140,29 +143,13 @@ service modem /system/xbin/wireless_modem
 	group system
 	disabled
 
-service htc_ebdlogd /system/bin/htc_ebdlogd -s -k -P 7
-    user root
-    disabled
-    oneshot
-    ioprio idle 0
-
-service htc_ebdlogd_rel /system/bin/htc_ebdlogd -s -k
-    user root
-    disabled
-    oneshot
-    ioprio idle 0
-
-on property:ro.build.tags=test-keys
-    start htc_ebdlogd
-
-on property:ro.build.tags=release-keys
-    start htc_ebdlogd_rel
-
 on property:service.modem.enable=1
 	start modem
 
 on property:service.modem.enable=0
 	stop modem
+
+
 
 service dmagent /system/bin/dmagent -N -P19 -SA -VSY
     socket dmagent stream 660 root radio
