--- a/kernel/drivers/cpufreq/Kconfig
+++ b/kernel/drivers/cpufreq/Kconfig
@@ -105,6 +105,12 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASS
   	help
     	  Use the CPUFreq governor 'smartass' as default.
 
+config CPU_FREQ_DEFAULT_GOV_SMARTASS2
+  	bool "smartass2"
+  	select CPU_FREQ_GOV_SMARTASS2
+  	help
+    	  Use the CPUFreq governor 'smartass' as default.
+
 config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
   	bool "interactive"
 	select CPU_FREQ_GOV_INTERACTIVE
@@ -194,6 +200,13 @@ config CPU_FREQ_GOV_CONSERVATIVE
 
 config CPU_FREQ_GOV_SMARTASS
 	tristate "'smartass' cpufreq governor"
+	depends on CPU_FREQ
+	help
+ 	   'smartass' - a "smart" optimized governor for the hero!
+	    If in doubt, say N.
+
+config CPU_FREQ_GOV_SMARTASS2
+	tristate "'smartass2' cpufreq governor"
 	depends on CPU_FREQ
 	help
  	   'smartass' - a "smart" optimized governor for the hero!
