smartass2 tuned for my frequencies

--- a/kernel/.config
+++ b/kernel/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.13
-# Wed Sep 21 20:18:14 2011
+# Thu Oct  6 22:52:19 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-imoseyon-3.7.1AOSP-184"
+CONFIG_LOCALVERSION="-imoseyon-3.8.0AOSP-184"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -398,7 +398,7 @@ CONFIG_MICROP_COMMON=y
 CONFIG_HTC_HEADSET_MGR=y
 # CONFIG_HTC_HEADSET_H2W is not set
 CONFIG_HTC_HEADSET_GPIO=y
-CONFIG_HTC_HEADSET_MICROP=y
+# CONFIG_HTC_HEADSET_MICROP is not set
 CONFIG_HTC_HEADSET_PMIC=y
 # CONFIG_HTC_HEADSET_PMIC_ADC is not set
 # CONFIG_HTC_ONMODE_CHARGING is not set
