--- a/kernel/arch/arm/configs/lean_mecha_aosp_defconfig
+++ b/kernel/arch/arm/configs/lean_mecha_aosp_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.14
-# Sat Oct 22 08:18:00 2011
+# Thu Oct 27 21:08:30 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-imoseyon-4.1.2AOSP"
+CONFIG_LOCALVERSION="-imoseyon-4.2.0AOSP"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -57,7 +57,9 @@ CONFIG_SYSVIPC_SYSCTL=y
 #
 # CONFIG_TREE_RCU is not set
 # CONFIG_TREE_PREEMPT_RCU is not set
-CONFIG_TINY_RCU=y
+# CONFIG_TINY_RCU is not set
+CONFIG_TINY_PREEMPT_RCU=y
+CONFIG_PREEMPT_RCU=y
 # CONFIG_TREE_RCU_TRACE is not set
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
